--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Maven generated
-target/
+#target/
 
 # Eclipse generated
 .apt_generated/
@@ -17,3 +17,4 @@ MANIFEST.MF
 
 # Zip files
 *.zip
+/target/
